# Geolocalization_of_Street_Objects

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt  setup.py
data/faster_r-cnn_output/: bicycle_symbols.csv  bicycle_symbols_example.csv
data/faster_r-cnn_output/row1/: 121500.0,494400.0,123000.0,490364.05.csv  123000.0,494400.0,128000.0,490364.05.csv
data/faster_r-cnn_output/row2/: 109500.0,490364.05,113500.0,487000.0.csv  113500.0,490364.05,116500.0,487000.0.csv  116500.0,490364.05,118000.0,487000.0.csv  118000.0,490364.05,119500.0,487000.0.csv  119500.0,490364.05,121000.0,487000.0.csv  121000.0,490364.05,122500.0,487000.0.csv  122500.0,490364.05,123200.0,487000.0.csv  123200.0,490364.05,125000.0,487000.0.csv  125000.0,490364.05,131000.0,487000.0.csv
data/faster_r-cnn_output/row3/: 109500.0,487000.0,114500.0,483000.0.csv  114500.0,487000.0,115200.0,483000.0.csv  115200.0,487000.0,116000.0,483000.0.csv  116000.0,487000.0,117000.0,483000.0.csv  (+11 more)
data/postprocessing_output/: bicycle_symbols.csv  bicycle_symbols_example.csv
examples/: visualize.py  visualize_intersections.py  visualize_viewpoints.py
models/: test.py
output/: bicycle_symbol_geolocation.csv  bicycle_symbol_locations_2019_RD.csv  bicycle_symbol_locations_2019_latlng.csv  bicycle_symbols_example.csv
scripts/: YOLO_to_COCO_converter.py  masking.py  postprocessing.py
src/: api_request.py  geometry.py
triangulation/: helpers.py  masking.py  triangulate.py  triangulation.py
triangulation/triangulation.egg-info/: PKG-INFO  SOURCES.txt
utils/: api_request.py  geometry.py
(+6 files in other folders)
