[tool.poetry]
name = "triangulation"
version = "0.1.22"
description = ""
authors = ["laurenssam <laurenssamson@hotmail.com>"]

[tool.poetry.dependencies]
python = "^3.7,<3.11"
GDAL = "3.4.3"
numpy = "1.21.6"
Pillow = "9.1.0"
scipy = "1.7.3"
tqdm = "4.64.0"
Shapely = "1.8.2"
imantics = "0.1.12"
pycocotools = "2.0.4"

[tool.poetry.dev-dependencies]


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
